--- a/index.html
+++ b/index.html
@@ -52,35 +52,64 @@
         <h2>Restaurants</h2>
 
         <div class="restaurants_cards">
-          <a href="#" class="card">
+          <a href="file:///C:/Users/colin/Documents/OhMyFood/palette.html" class="card">
             <div class="images">
               <img src="restaurants/palette.jpg" alt="resto palette" />
             </div>
-            <div class="description"></div>
+            <div class="description">
+              <h3>La palette du goût</h3>
+              <p>Ménilmontant</p>
+              <i class="fas fa-heart"></i>
+              <i class="far fa-heart"></i>
+            </div>
           </a>
 
           <a href="#" class="card">
             <div class="images">
               <img src="restaurants/enchantee.jpg" alt="resto enchantee" />
             </div>
-            <div class="description"></div>
+            <div class="description">
+              <h3>La note enchantée</h3>
+              <p>Charonne</p>
+              <i class="far fa-heart"></i>
+            </div>
           </a>
+          
 
           <a href="#" class="card">
             <div class="images">
               <img src="restaurants/francaise.jpg" alt="resto francaise" />
             </div>
-            <div class="description"></div>
+            <div class="description">
+            <h3>A la française</h3>
+            <p>Cité rouge</p>
+            <i class="far fa-heart"></i>
+            </div>
           </a>
 
           <a href="#" class="card">
             <div class="images">
               <img src="restaurants/sens.jpg" alt="resto sens" />
             </div>
-            <div class="description"></div>
+            <div class="description">
+            <h3>Le délice des sens</h3>
+            <p>Folie-Méricourt</p>
+            <i class="far fa-heart"></i>
+            </div>
           </a>
         </div>
       </section>
     </main>
+    <footer>
+      <h2>ohmyfood
+      </h2>
+       <p>
+         <i class="fas fa-utensils"></i>Proposer un restaurant</p>
+       <p><i class="fas fa-hands-helping"></i>Devenir partenaire</p>
+       <p>Mentions légales</p>
+       <p>
+         <a href="#">Contact</a>
+        </p>
+    </footer>
   </body>
 </html>
