--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
   </head>
 
   <body>
+    <div class="loader">
+      <i class="fas fa-drumstick-bite"></i>
+    </div>
     <header>
       <h1>ohmyfood</h1>
     </header>
@@ -52,19 +55,19 @@
         <h2>Restaurants</h2>
 
         <div class="restaurants_cards">
-          <a href="file:///C:/Users/colin/Documents/OhMyFood/palette.html" class="card">
+          <a href="file:///C:/Users/colin/Documents/OhMyFood/palette.html" class="card nouveau">
             <div class="images">
               <img src="restaurants/palette.jpg" alt="resto palette" />
             </div>
             <div class="description">
               <h3>La palette du goût</h3>
               <p>Ménilmontant</p>
-              <i class="fas fa-heart"></i>
               <i class="far fa-heart"></i>
+              <i class="fas fa-heart"></i>
             </div>
           </a>
 
-          <a href="#" class="card">
+          <a href="#" class="card nouveau">
             <div class="images">
               <img src="restaurants/enchantee.jpg" alt="resto enchantee" />
             </div>
@@ -72,6 +75,7 @@
               <h3>La note enchantée</h3>
               <p>Charonne</p>
               <i class="far fa-heart"></i>
+              <i class="fas fa-heart"></i>
             </div>
           </a>
           
@@ -84,6 +88,7 @@
             <h3>A la française</h3>
             <p>Cité rouge</p>
             <i class="far fa-heart"></i>
+            <i class="fas fa-heart"></i>
             </div>
           </a>
 
@@ -95,6 +100,7 @@
             <h3>Le délice des sens</h3>
             <p>Folie-Méricourt</p>
             <i class="far fa-heart"></i>
+            <i class="fas fa-heart"></i>
             </div>
           </a>
         </div>
