--- a/palette.html
+++ b/palette.html
@@ -5,16 +5,22 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<link rel="preconnect" href="https://fonts.googleapis.com" />
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-		<linkhref="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,500;1,400&family=Shrikhand&display=swap"rel="stylesheet"/>
-		<title>La palette du goût</title>
+		<link
+		  href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,500;1,400&family=Shrikhand&display=swap"
+		  rel="stylesheet"
+		/>
+		<title>La palette du gout</title>
 		<link rel="stylesheet" href="style.css" />
-		<scriptsrc="https://kit.fontawesome.com/d21317d11a.js"crossorigin="anonymous"></script>
-	</head>
+		<script
+		  src="https://kit.fontawesome.com/d21317d11a.js"
+		  crossorigin="anonymous"
+		></script>
+	  </head>
 	<body>
 		<header>
 			<h1>ohmyfood</h1>
 		</header>
-		<img src="restaurants/palette.jpg" alt="resto palette" />
+		<img src="restaurants/palette.jpg" alt="resto palette"/>
 		<h2>La palette du goût</h2>
 		<main>
 			<section class="menus">
