--- a/index.html
+++ b/index.html
@@ -55,27 +55,36 @@
         <h2>Restaurants</h2>
 
         <div class="restaurants_cards">
-          <a href="file:///C:/Users/colin/Documents/OhMyFood/palette.html" class="card nouveau">
+          <a href="file:///C:/Users/colin/Documents/OhMyFood/palette.html" class="card">
             <div class="images">
               <img src="restaurants/palette.jpg" alt="resto palette" />
             </div>
             <div class="description">
               <h3>La palette du goût</h3>
               <p>Ménilmontant</p>
-              <i class="far fa-heart"></i>
-              <i class="fas fa-heart"></i>
+              <div class="form-check">
+              <input id="checkbox1" class="btn-check" type="checkbox">
+              <label for="checkbox1" class="like">
+                <i class="fas fa-heart"></i>
+                <i class="far fa-heart"></i> 
+                </label>
+                </div>
             </div>
           </a>
 
-          <a href="#" class="card nouveau">
+          <a href="#" class="card">
             <div class="images">
               <img src="restaurants/enchantee.jpg" alt="resto enchantee" />
             </div>
             <div class="description">
               <h3>La note enchantée</h3>
               <p>Charonne</p>
-              <i class="far fa-heart"></i>
-              <i class="fas fa-heart"></i>
+              <input id="checkbox2" class="btn-check" type="checkbox">
+              <label for="checkbox2" class="like">
+                <i class="fas fa-heart"></i>
+                <i class="far fa-heart"></i>    
+              </label>
+
             </div>
           </a>
           
@@ -87,8 +96,11 @@
             <div class="description">
             <h3>A la française</h3>
             <p>Cité rouge</p>
-            <i class="far fa-heart"></i>
-            <i class="fas fa-heart"></i>
+            <input id="checkbox3" class="btn-check" type="checkbox">
+            <label for="checkbox3" class="like">
+              <i class="fas fa-heart"></i>
+              <i class="far fa-heart"></i>    
+            </label>
             </div>
           </a>
 
@@ -99,8 +111,11 @@
             <div class="description">
             <h3>Le délice des sens</h3>
             <p>Folie-Méricourt</p>
-            <i class="far fa-heart"></i>
-            <i class="fas fa-heart"></i>
+            <input id="checkbox4" class="btn-check" type="checkbox">
+            <label for="checkbox4" class="like">
+              <i class="fas fa-heart"></i>
+              <i class="far fa-heart"></i>    
+            </label>
             </div>
           </a>
         </div>
