--- a/palette.html
+++ b/palette.html
@@ -21,8 +21,17 @@
 			<h1>ohmyfood</h1>
 		</header>
 		<img src="restaurants/palette.jpg" alt="resto palette"/>
-		<h2>La palette du goût</h2>
+		
 		<main>
+			<h2>La palette du goût</h2>
+			<section class="coeur">
+			<input id="checkbox5" class="btn-check" type="checkbox">
+            <label for="checkbox5" class="like">
+              <i class="fas fa-heart"></i>
+              <i class="far fa-heart"></i>    
+            </label>
+			</section>
+
 			<section class="menus">
 				<div class="menus__plats">
 					<h3>Entrées</h3>
