--- a/index.html
+++ b/index.html
@@ -79,11 +79,13 @@
             <div class="description">
               <h3>La note enchantée</h3>
               <p>Charonne</p>
+              <div class="form-check">
               <input id="checkbox2" class="btn-check" type="checkbox">
               <label for="checkbox2" class="like">
                 <i class="fas fa-heart"></i>
                 <i class="far fa-heart"></i>    
               </label>
+              </div>
 
             </div>
           </a>
@@ -96,12 +98,14 @@
             <div class="description">
             <h3>A la française</h3>
             <p>Cité rouge</p>
+            <div class="form-check">
             <input id="checkbox3" class="btn-check" type="checkbox">
             <label for="checkbox3" class="like">
               <i class="fas fa-heart"></i>
               <i class="far fa-heart"></i>    
             </label>
             </div>
+          </div>
           </a>
 
           <a href="#" class="card">
@@ -111,11 +115,13 @@
             <div class="description">
             <h3>Le délice des sens</h3>
             <p>Folie-Méricourt</p>
+            <div class="form-check">
             <input id="checkbox4" class="btn-check" type="checkbox">
             <label for="checkbox4" class="like">
               <i class="fas fa-heart"></i>
               <i class="far fa-heart"></i>    
             </label>
+            </div>
             </div>
           </a>
         </div>
