--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
        <p><i class="fas fa-hands-helping"></i>Devenir partenaire</p>
        <p>Mentions légales</p>
        <p>
-         <a href="#">Contact</a>
+         <a href="mailto:coline.miclard@hotmail.fr">Contact</a>
         </p>
     </footer>
   </body>
