--- a/palette.html
+++ b/palette.html
@@ -22,7 +22,7 @@
 		</header>
 		<img src="restaurants/palette.jpg" alt="resto palette"/>
 		
-		<main>
+		<main class="nom">
 			<h2>La palette du goût</h2>
 			<section class="coeur">
 			<input id="checkbox5" class="btn-check" type="checkbox">
