--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
             </div>
           </a>
 
-          <a href="#" class="card">
+          <a href="file:///C:/Users/colin/Desktop/OhMyFood/enchantee.html" class="card">
             <div class="images">
               <img src="restaurants/enchantee.jpg" alt="resto enchantee" />
             </div>
@@ -91,7 +91,7 @@
           </a>
           
 
-          <a href="#" class="card">
+          <a href="file:///C:/Users/colin/Desktop/OhMyFood/francaise.html" class="card">
             <div class="images">
               <img src="restaurants/francaise.jpg" alt="resto francaise" />
             </div>
@@ -108,7 +108,7 @@
           </div>
           </a>
 
-          <a href="#" class="card">
+          <a href="file:///C:/Users/colin/Desktop/OhMyFood/sens.html" class="card">
             <div class="images">
               <img src="restaurants/sens.jpg" alt="resto sens" />
             </div>
