--- a/palette.html
+++ b/palette.html
@@ -17,9 +17,13 @@
 		></script>
 	  </head>
 	<body>
+		<a href="file:///C:/Users/colin/Desktop/OhMyFood/index.html">
 		<header>
 			<h1>ohmyfood</h1>
+			<i class="fa-arrow-left fas header__arrow" aria-hidden="true"></i>
 		</header>
+		</a>
+		
 		<img src="restaurants/palette.jpg" alt="resto palette"/>
 		
 		<main class="nom">
