--- a/sens.html
+++ b/sens.html
@@ -1,40 +1,186 @@
 <!DOCTYPE html>
 <html lang="fr">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,500;1,400&family=Shrikhand&display=swap"
-      rel="stylesheet"
-    />
-    <title>La palette du goût</title>
-    <link rel="stylesheet" href="style.css" />
-    <script
-      src="https://kit.fontawesome.com/d21317d11a.js"
-      crossorigin="anonymous"
-    ></script>
-  </head>
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<link rel="preconnect" href="https://fonts.googleapis.com" />
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+		<link
+		  href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,500;1,400&family=Shrikhand&display=swap"
+		  rel="stylesheet"
+		/>
+		<title>Le délice des sens</title>
+		<link rel="stylesheet" href="style.css" />
+		<script
+		  src="https://kit.fontawesome.com/d21317d11a.js"
+		  crossorigin="anonymous"
+		></script>
+	  </head>
+	<body>
+		<a href="file:///C:/Users/colin/Desktop/OhMyFood/index.html">
+		<header>
+			<h1>ohmyfood</h1>
+			<i class="fa-arrow-left fas header__arrow" aria-hidden="true"></i>
+		</header>
+		</a>
+		
+		<img src="restaurants/sens.jpg" alt="resto palette"/>
+		
+		<main class="nom">
+			<h2>Le délice des sens</h2>
+			<section class="coeur">
+			<input id="checkbox5" class="btn-check" type="checkbox">
+            <label for="checkbox5" class="like">
+              <i class="fas fa-heart"></i>
+              <i class="far fa-heart"></i>    
+            </label>
+			</section>
 
-
-  <body>
-    <header>
-      <h1>ohmyfood</h1>
-    </header>
-
-  <img src="restaurants/palette.jpg" alt="resto palette" />
-
-  <footer>
-    <h2>ohmyfood
-    </h2>
-     <p>
-       <i class="fas fa-utensils"></i>Proposer un restaurant</p>
-     <p><i class="fas fa-hands-helping"></i>Devenir partenaire</p>
-     <p>Mentions légales</p>
-     <p>
-       <a href="#">Contact</a>
-      </p>
-  </footer>
-</body>
-</html>  
+			<section class="menus">
+				<div class="menus__plats">
+					<h3>Entrées</h3>
+					<div class="menu__plats__liste">
+						<div class="menu-item">
+							<div class="menu-item__description">
+								<h4>Fricassée d'escargot</h4>
+								<p>
+									Au piment d'espelette
+								</p>
+							</div>
+							<span class="menu-item__prix">25€</span>
+							<div class="menu-item__check">
+								<i class="fas fa-check"></i>
+							</div>
+						</div>
+						<div class="menu-item">
+							<div class="menu-item__description">
+								<h4>Foie gras de canard mi-cuit</h4>
+								<p>
+									Et ses copeaux de truffe noire
+								</p>
+							</div>
+							<span class="menu-item__prix">35€</span>
+							<div class="menu-item__check">
+								<i class="fas fa-check"></i>
+							</div>
+						</div>
+						<div class="menu-item">
+							<div class="menu-item__description">
+								<h4>Oeuf au plat</h4>
+								<p>
+									Assaisonné à la truffe sur lit de poireaux
+								</p>
+							</div>
+							<span class="menu-item__prix">20€</span>
+							<div class="menu-item__check">
+								<i class="fas fa-check"></i>
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class="menus__plats">
+					<h3>Plats</h3>
+					<div class="menu__plats__liste">
+						<div class="menu-item">
+							<div class="menu-item__description">
+								<h4>Filet de boeuf aux herbes</h4>
+								<p>
+									Accompagné de sa ribambelle de légumes
+								</p>
+							</div>
+							<span class="menu-item__prix">40€</span>
+							<div class="menu-item__check">
+								<i class="fas fa-check"></i>
+							</div>
+						</div>
+						<div class="menu-item">
+							<div class="menu-item__description">
+								<h4>Parmentier de queue de boeuf</h4>
+								<p>
+									A la truffe noire sur sa purée de panais
+								</p>
+							</div>
+							<span class="menu-item__prix">35€</span>
+							<div class="menu-item__check">
+								<i class="fas fa-check"></i>
+							</div>
+						</div>
+						<div class="menu-item">
+							<div class="menu-item__description">
+								<h4>Filet de Turbot</h4>
+								<p>
+									Aux agrumes
+								</p>
+							</div>
+							<span class="menu-item__prix">44€</span>
+							<div class="menu-item__check">
+								<i class="fas fa-check"></i>
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class="menus__plats">
+					<h3>Desserts</h3>
+					<div class="menu__plats__liste">
+						<div class=" menu-item">
+							<div class="menu-item__description">
+								<h4>Paris-Brest</h4>
+								<p>
+									Revisité
+								</p>
+							</div>
+							<span class="menu-item__prix">18€</span>
+							<div class="menu-item__check">
+								<i class="fas fa-check"></i>
+							</div>
+						</div>
+						<div class="menu-item">
+							<div class="menu-item__description">
+								<h4>Macaron au chocolat d'exception</h4>
+								<p>
+									Et glace à la vanille de Madagascar
+								</p>
+							</div>
+							<span class="menu-item__prix">22€</span>
+							<div class="menu-item__check">
+								<i class="fas fa-check"></i>
+							</div>
+						</div>
+						<div class="menu-item">
+							<div class="menu-item__description">
+								<h4>Mousse au chocolat</h4>
+								<p>
+									Au piment d'espelette et à la truffe noire
+								</p>
+							</div>
+							<span class="menu-item__prix">23€</span>
+							<div class="menu-item__check">
+								<i class="fas fa-check"></i>
+							</div>
+						</div>
+					</div>
+				</div>
+			</section>
+			<section class="order">
+				<button>Commander</button>
+			</section>
+		</main>
+		<footer>
+			<h2>ohmyfood</h2>
+			<p>
+				<i class="fas fa-utensils"></i>
+				Proposer un restaurant
+			</p>
+			<p>
+				<i class="fas fa-hands-helping"></i>
+				Devenir partenaire
+			</p>
+			<p>
+				Mentions légales
+			</p>
+			<p>
+				<a href="#">Contact</a>
+			</p>
+		</footer>
+	</body>
+</html>
