--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         <h2>Restaurants</h2>
 
         <div class="restaurants_cards">
-          <a href="file:///C:/Users/colin/Desktop/OhMyFood/palette.html" class="card">
+          <a href="file:///C:/Users/colin/Desktop/OhMyFood/palette.html" class="card nouveau">
             <div class="images">
               <img src="restaurants/palette.jpg" alt="resto palette" />
             </div>
@@ -72,7 +72,7 @@
             </div>
           </a>
 
-          <a href="file:///C:/Users/colin/Desktop/OhMyFood/enchantee.html" class="card">
+          <a href="file:///C:/Users/colin/Desktop/OhMyFood/enchantee.html" class="card nouveau">
             <div class="images">
               <img src="restaurants/enchantee.jpg" alt="resto enchantee" />
             </div>
@@ -108,7 +108,7 @@
           </div>
           </a>
 
-          <a href="file:///C:/Users/colin/Desktop/OhMyFood/sens.html" class="card">
+          <a href="./sens.html" class="card">
             <div class="images">
               <img src="restaurants/sens.jpg" alt="resto sens" />
             </div>
