--- a/palette.html
+++ b/palette.html
@@ -40,6 +40,8 @@
 				<div class="menus__plats">
 					<h3>Entrées</h3>
 					<div class="menu__plats__liste">
+						<input class="btn-radio" id="fricassee_escargot" name="entree" type="radio">
+                            <label for="fricassee_escargot" class="choix">
 						<div class="menu-item">
 							<div class="menu-item__description">
 								<h4>Fricassée d'escargot</h4>
@@ -52,6 +54,9 @@
 								<i class="fas fa-check"></i>
 							</div>
 						</div>
+							</label>
+							<input class="btn-radio" id="foie_canard" name="entree" type="radio">
+                            <label for="foie_canard" class="choix">
 						<div class="menu-item">
 							<div class="menu-item__description">
 								<h4>Foie gras de canard mi-cuit</h4>
@@ -64,6 +69,11 @@
 								<i class="fas fa-check"></i>
 							</div>
 						</div>
+							</label>
+
+							<input class="btn-radio" id="oeuf_plat" name="entree" type="radio">
+                            <label for="oeuf_plat" class="choix">
+
 						<div class="menu-item">
 							<div class="menu-item__description">
 								<h4>Oeuf au plat</h4>
@@ -76,11 +86,14 @@
 								<i class="fas fa-check"></i>
 							</div>
 						</div>
+							</label>
 					</div>
 				</div>
 				<div class="menus__plats">
 					<h3>Plats</h3>
 					<div class="menu__plats__liste">
+						<input class="btn-radio" id="filet_boeuf" name="plat" type="radio">
+                            <label for="filet_boeuf" class="choix">
 						<div class="menu-item">
 							<div class="menu-item__description">
 								<h4>Filet de boeuf aux herbes</h4>
@@ -93,6 +106,9 @@
 								<i class="fas fa-check"></i>
 							</div>
 						</div>
+							</label>
+							<input class="btn-radio" id="parmentier_boeuf" name="plat" type="radio">
+                            <label for="parmentier_boeuf" class="choix">
 						<div class="menu-item">
 							<div class="menu-item__description">
 								<h4>Parmentier de queue de boeuf</h4>
@@ -105,6 +121,10 @@
 								<i class="fas fa-check"></i>
 							</div>
 						</div>
+							</label>
+							<input class="btn-radio" id="filet_turbo" name="plat" type="radio">
+							<label for="filet_turbo" class="choix">
+
 						<div class="menu-item">
 							<div class="menu-item__description">
 								<h4>Filet de Turbot</h4>
@@ -117,11 +137,15 @@
 								<i class="fas fa-check"></i>
 							</div>
 						</div>
+							</label>
 					</div>
 				</div>
 				<div class="menus__plats">
 					<h3>Desserts</h3>
 					<div class="menu__plats__liste">
+						<input class="btn-radio" id="paris_brest" name="dessert" type="radio">
+                            <label for="paris_brest" class="choix">
+
 						<div class=" menu-item">
 							<div class="menu-item__description">
 								<h4>Paris-Brest</h4>
@@ -134,6 +158,10 @@
 								<i class="fas fa-check"></i>
 							</div>
 						</div>
+							</label>
+							<input class="btn-radio" id="macaron_chocolat" name="dessert" type="radio">
+                            <label for="macaron_chocolat" class="choix">
+
 						<div class="menu-item">
 							<div class="menu-item__description">
 								<h4>Macaron au chocolat d'exception</h4>
@@ -146,6 +174,10 @@
 								<i class="fas fa-check"></i>
 							</div>
 						</div>
+							</label>
+							<input class="btn-radio" id="mousse_chocolat" name="dessert" type="radio">
+                            <label for="mousse_chocolat" class="choix">
+
 						<div class="menu-item">
 							<div class="menu-item__description">
 								<h4>Mousse au chocolat</h4>
@@ -158,6 +190,7 @@
 								<i class="fas fa-check"></i>
 							</div>
 						</div>
+							</label>
 					</div>
 				</div>
 			</section>
