--- a/palette.html
+++ b/palette.html
@@ -17,7 +17,7 @@
 		></script>
 	  </head>
 	<body>
-		<a href="file:///C:/Users/colin/Desktop/OhMyFood/index.html">
+		<a href="./index.html">
 		<header>
 			<h1>ohmyfood</h1>
 			<i class="fa-arrow-left fas header__arrow" aria-hidden="true"></i>
@@ -29,8 +29,8 @@
 		<main class="nom">
 			<h2>La palette du goût</h2>
 			<section class="coeur">
-			<input id="checkbox5" class="btn-check" type="checkbox">
-            <label for="checkbox5" class="like">
+			<input id="checkbox" class="btn-check" type="checkbox">
+            <label for="checkbox" class="like">
               <i class="fas fa-heart"></i>
               <i class="far fa-heart"></i>    
             </label>
