--- a/enchantee.html
+++ b/enchantee.html
@@ -17,20 +17,20 @@
 		></script>
 	  </head>
 	<body>
-		<a href="file:///C:/Users/colin/Desktop/OhMyFood/index.html">
+		<a href="./index.html">
 		<header>
 			<h1>ohmyfood</h1>
 			<i class="fa-arrow-left fas header__arrow" aria-hidden="true"></i>
 		</header>
 		</a>
 		
-		<img src="restaurants/enchantee.jpg" alt="resto palette"/>
+		<img src="restaurants/enchantee.jpg" alt="resto enchantee"/>
 		
 		<main class="nom">
-			<h2>La note enchantee</h2>
+			<h2>La note enchantée</h2>
 			<section class="coeur">
-			<input id="checkbox5" class="btn-check" type="checkbox">
-            <label for="checkbox5" class="like">
+			<input id="checkbox" class="btn-check" type="checkbox">
+            <label for="checkbox" class="like">
               <i class="fas fa-heart"></i>
               <i class="far fa-heart"></i>    
             </label>
@@ -40,11 +40,13 @@
 				<div class="menus__plats">
 					<h3>Entrées</h3>
 					<div class="menu__plats__liste">
+						<input class="btn-radio" id="ravioles_foie" name="entree" type="radio">
+                            <label for="ravioles_foie" class="choix">
 						<div class="menu-item">
 							<div class="menu-item__description">
-								<h4>Fricassée d'escargot</h4>
+								<h4>Ravioles de foie gras</h4>
 								<p>
-									Au piment d'espelette
+									Accompagnés de leur crème à la truffe
 								</p>
 							</div>
 							<span class="menu-item__prix">25€</span>
@@ -52,11 +54,14 @@
 								<i class="fas fa-check"></i>
 							</div>
 						</div>
+							</label>
+							<input class="btn-radio" id="caviar_oscietre" name="entree" type="radio">
+                            <label for="caviar_oscietre" class="choix">
 						<div class="menu-item">
 							<div class="menu-item__description">
-								<h4>Foie gras de canard mi-cuit</h4>
+								<h4>Caviar osciètre</h4>
 								<p>
-									Et ses copeaux de truffe noire
+									Sur blini de farine de blé noir
 								</p>
 							</div>
 							<span class="menu-item__prix">35€</span>
@@ -64,28 +69,36 @@
 								<i class="fas fa-check"></i>
 							</div>
 						</div>
+							</label>
+
+							<input class="btn-radio" id="foie_cuit" name="entree" type="radio">
+                            <label for="foie_cuit" class="choix">
+
 						<div class="menu-item">
 							<div class="menu-item__description">
-								<h4>Oeuf au plat</h4>
+								<h4>Foie gras de canard cuit entier</h4>
 								<p>
-									Assaisonné à la truffe sur lit de poireaux
+									Confiture de figue et pain toasté
 								</p>
 							</div>
-							<span class="menu-item__prix">20€</span>
+							<span class="menu-item__prix">35€</span>
 							<div class="menu-item__check">
 								<i class="fas fa-check"></i>
 							</div>
 						</div>
+							</label>
 					</div>
 				</div>
 				<div class="menus__plats">
 					<h3>Plats</h3>
 					<div class="menu__plats__liste">
+						<input class="btn-radio" id="noix_jacques" name="plat" type="radio">
+                            <label for="noix_jacques" class="choix">
 						<div class="menu-item">
 							<div class="menu-item__description">
-								<h4>Filet de boeuf aux herbes</h4>
+								<h4>Noix de coquilles Saint-Jacques</h4>
 								<p>
-									Accompagné de sa ribambelle de légumes
+									Sur lit de purée de céleri-rave
 								</p>
 							</div>
 							<span class="menu-item__prix">40€</span>
@@ -93,11 +106,14 @@
 								<i class="fas fa-check"></i>
 							</div>
 						</div>
+							</label>
+							<input class="btn-radio" id="langoustine" name="plat" type="radio">
+                            <label for="langoustine" class="choix">
 						<div class="menu-item">
 							<div class="menu-item__description">
-								<h4>Parmentier de queue de boeuf</h4>
+								<h4>Langoustine poêlée</h4>
 								<p>
-									A la truffe noire sur sa purée de panais
+									Purée de patate douce
 								</p>
 							</div>
 							<span class="menu-item__prix">35€</span>
@@ -105,11 +121,15 @@
 								<i class="fas fa-check"></i>
 							</div>
 						</div>
+							</label>
+							<input class="btn-radio" id="mijote_boeuf" name="plat" type="radio">
+							<label for="mijote_boeuf" class="choix">
+
 						<div class="menu-item">
 							<div class="menu-item__description">
-								<h4>Filet de Turbot</h4>
+								<h4>Mijoté de queue de boeuf</h4>
 								<p>
-									Aux agrumes
+									Et riz sauvage aux zests de citron
 								</p>
 							</div>
 							<span class="menu-item__prix">44€</span>
@@ -117,16 +137,20 @@
 								<i class="fas fa-check"></i>
 							</div>
 						</div>
+							</label>
 					</div>
 				</div>
 				<div class="menus__plats">
 					<h3>Desserts</h3>
 					<div class="menu__plats__liste">
+						<input class="btn-radio" id="macaron_noisette" name="dessert" type="radio">
+                            <label for="macaron_noisette" class="choix">
+
 						<div class=" menu-item">
 							<div class="menu-item__description">
-								<h4>Paris-Brest</h4>
+								<h4>Macaron noisette et chocolat</h4>
 								<p>
-									Revisité
+									Glace au caramel brun et sel de Guérande
 								</p>
 							</div>
 							<span class="menu-item__prix">18€</span>
@@ -134,11 +158,15 @@
 								<i class="fas fa-check"></i>
 							</div>
 						</div>
+							</label>
+							<input class="btn-radio" id="baba_rhum" name="dessert" type="radio">
+                            <label for="baba_rhum" class="choix">
+
 						<div class="menu-item">
 							<div class="menu-item__description">
-								<h4>Macaron au chocolat d'exception</h4>
+								<h4>Baba au rhum revisité</h4>
 								<p>
-									Et glace à la vanille de Madagascar
+									Avec son coulis de citron
 								</p>
 							</div>
 							<span class="menu-item__prix">22€</span>
@@ -146,11 +174,15 @@
 								<i class="fas fa-check"></i>
 							</div>
 						</div>
+							</label>
+							<input class="btn-radio" id="tarte_citron" name="dessert" type="radio">
+                            <label for="tarte_citron" class="choix">
+
 						<div class="menu-item">
 							<div class="menu-item__description">
-								<h4>Mousse au chocolat</h4>
+								<h4>Tarte au citron meringuée</h4>
 								<p>
-									Au piment d'espelette et à la truffe noire
+									Destructurée
 								</p>
 							</div>
 							<span class="menu-item__prix">23€</span>
@@ -158,6 +190,7 @@
 								<i class="fas fa-check"></i>
 							</div>
 						</div>
+							</label>
 					</div>
 				</div>
 			</section>
