--- a/francaise.html
+++ b/francaise.html
@@ -9,7 +9,7 @@
 		  href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,500;1,400&family=Shrikhand&display=swap"
 		  rel="stylesheet"
 		/>
-		<title>A la française</title>
+		<title>La palette du gout</title>
 		<link rel="stylesheet" href="style.css" />
 		<script
 		  src="https://kit.fontawesome.com/d21317d11a.js"
@@ -17,20 +17,20 @@
 		></script>
 	  </head>
 	<body>
-		<a href="file:///C:/Users/colin/Desktop/OhMyFood/index.html">
+		<a href="./index.html">
 		<header>
 			<h1>ohmyfood</h1>
 			<i class="fa-arrow-left fas header__arrow" aria-hidden="true"></i>
 		</header>
 		</a>
 		
-		<img src="restaurants/francaise.jpg" alt="resto palette"/>
+		<img src="restaurants/francaise.jpg" alt="resto francaise"/>
 		
 		<main class="nom">
-			<h2>A la francaise</h2>
+			<h2>A la française</h2>
 			<section class="coeur">
-			<input id="checkbox5" class="btn-check" type="checkbox">
-            <label for="checkbox5" class="like">
+			<input id="checkbox" class="btn-check" type="checkbox">
+            <label for="checkbox" class="like">
               <i class="fas fa-heart"></i>
               <i class="far fa-heart"></i>    
             </label>
@@ -40,11 +40,13 @@
 				<div class="menus__plats">
 					<h3>Entrées</h3>
 					<div class="menu__plats__liste">
+						<input class="btn-radio" id="tartare_poulpe" name="entree" type="radio">
+                            <label for="tartare_poulpe" class="choix">
 						<div class="menu-item">
 							<div class="menu-item__description">
-								<h4>Fricassée d'escargot</h4>
+								<h4>Tartare de poulpe acidulé</h4>
 								<p>
-									Au piment d'espelette
+									Aux zests d'orange
 								</p>
 							</div>
 							<span class="menu-item__prix">25€</span>
@@ -52,11 +54,14 @@
 								<i class="fas fa-check"></i>
 							</div>
 						</div>
+							</label>
+							<input class="btn-radio" id="veloute_dantan" name="entree" type="radio">
+                            <label for="veloute_dantan" class="choix">
 						<div class="menu-item">
 							<div class="menu-item__description">
-								<h4>Foie gras de canard mi-cuit</h4>
+								<h4>Velouté de légumes d'antan</h4>
 								<p>
-									Et ses copeaux de truffe noire
+									Carotte,panais,topinambour
 								</p>
 							</div>
 							<span class="menu-item__prix">35€</span>
@@ -64,11 +69,16 @@
 								<i class="fas fa-check"></i>
 							</div>
 						</div>
+							</label>
+
+							<input class="btn-radio" id="soupe_oignon" name="entree" type="radio">
+                            <label for="soupe_oignon" class="choix">
+
 						<div class="menu-item">
 							<div class="menu-item__description">
-								<h4>Oeuf au plat</h4>
+								<h4>Soupe à l'oignon</h4>
 								<p>
-									Assaisonné à la truffe sur lit de poireaux
+									Revisitée
 								</p>
 							</div>
 							<span class="menu-item__prix">20€</span>
@@ -76,16 +86,19 @@
 								<i class="fas fa-check"></i>
 							</div>
 						</div>
+							</label>
 					</div>
 				</div>
 				<div class="menus__plats">
 					<h3>Plats</h3>
 					<div class="menu__plats__liste">
+						<input class="btn-radio" id="coquilles" name="plat" type="radio">
+                            <label for="coquilles" class="choix">
 						<div class="menu-item">
 							<div class="menu-item__description">
-								<h4>Filet de boeuf aux herbes</h4>
+								<h4>Coquilles Saint-Jacques</h4>
 								<p>
-									Accompagné de sa ribambelle de légumes
+									Accompagnées d'une purée de panais
 								</p>
 							</div>
 							<span class="menu-item__prix">40€</span>
@@ -93,11 +106,14 @@
 								<i class="fas fa-check"></i>
 							</div>
 						</div>
+							</label>
+							<input class="btn-radio" id="magret-canard" name="plat" type="radio">
+                            <label for="magret_canard" class="choix">
 						<div class="menu-item">
 							<div class="menu-item__description">
-								<h4>Parmentier de queue de boeuf</h4>
+								<h4>Magret de canard</h4>
 								<p>
-									A la truffe noire sur sa purée de panais
+								 Et parmentier de pommes de terres
 								</p>
 							</div>
 							<span class="menu-item__prix">35€</span>
@@ -105,11 +121,14 @@
 								<i class="fas fa-check"></i>
 							</div>
 						</div>
+							</label>
+							<input class="btn-radio" id="pigeonneau" name="plat" type="radio">
+							<label for="pigeonneau" class="choix">
 						<div class="menu-item">
 							<div class="menu-item__description">
-								<h4>Filet de Turbot</h4>
+								<h4>Pigeonneau d'Ille-de-Vilaine</h4>
 								<p>
-									Aux agrumes
+									Sur son lit de gnocchis aux légumes
 								</p>
 							</div>
 							<span class="menu-item__prix">44€</span>
@@ -117,16 +136,20 @@
 								<i class="fas fa-check"></i>
 							</div>
 						</div>
+							</label>
 					</div>
 				</div>
 				<div class="menus__plats">
 					<h3>Desserts</h3>
 					<div class="menu__plats__liste">
+						<input class="btn-radio" id="petales_violettes" name="dessert" type="radio">
+                            <label for="petales_violettes" class="choix">
+
 						<div class=" menu-item">
 							<div class="menu-item__description">
-								<h4>Paris-Brest</h4>
+								<h4>Pétales de violettes glacés</h4>
 								<p>
-									Revisité
+									Et purée de noisettes
 								</p>
 							</div>
 							<span class="menu-item__prix">18€</span>
@@ -134,11 +157,15 @@
 								<i class="fas fa-check"></i>
 							</div>
 						</div>
+							</label>
+							<input class="btn-radio" id="fondant_chocolat" name="dessert" type="radio">
+                            <label for="fondant_chocolat" class="choix">
+
 						<div class="menu-item">
 							<div class="menu-item__description">
-								<h4>Macaron au chocolat d'exception</h4>
+								<h4>Fondant au chocolat</h4>
 								<p>
-									Et glace à la vanille de Madagascar
+									Revisité
 								</p>
 							</div>
 							<span class="menu-item__prix">22€</span>
@@ -146,11 +173,15 @@
 								<i class="fas fa-check"></i>
 							</div>
 						</div>
+							</label>
+							<input class="btn-radio" id="millefeuille" name="dessert" type="radio">
+                            <label for="millefeuille" class="choix">
+
 						<div class="menu-item">
 							<div class="menu-item__description">
-								<h4>Mousse au chocolat</h4>
+								<h4>Millefeuille croustillantt</h4>
 								<p>
-									Au piment d'espelette et à la truffe noire
+									Myrtilles et pâte d'amande
 								</p>
 							</div>
 							<span class="menu-item__prix">23€</span>
@@ -158,6 +189,7 @@
 								<i class="fas fa-check"></i>
 							</div>
 						</div>
+							</label>
 					</div>
 				</div>
 			</section>
