--- a/sens.html
+++ b/sens.html
@@ -17,20 +17,20 @@
 		></script>
 	  </head>
 	<body>
-		<a href="file:///C:/Users/colin/Desktop/OhMyFood/index.html">
+		<a href="./index.html">
 		<header>
 			<h1>ohmyfood</h1>
 			<i class="fa-arrow-left fas header__arrow" aria-hidden="true"></i>
 		</header>
 		</a>
 		
-		<img src="restaurants/sens.jpg" alt="resto palette"/>
+		<img src="restaurants/sens.jpg" alt="resto sens"/>
 		
 		<main class="nom">
 			<h2>Le délice des sens</h2>
 			<section class="coeur">
-			<input id="checkbox5" class="btn-check" type="checkbox">
-            <label for="checkbox5" class="like">
+			<input id="checkbox" class="btn-check" type="checkbox">
+            <label for="checkbox" class="like">
               <i class="fas fa-heart"></i>
               <i class="far fa-heart"></i>    
             </label>
@@ -40,11 +40,13 @@
 				<div class="menus__plats">
 					<h3>Entrées</h3>
 					<div class="menu__plats__liste">
+						<input class="btn-radio" id="tartare_thon" name="entree" type="radio">
+                            <label for="tartare_thon" class="choix">
 						<div class="menu-item">
 							<div class="menu-item__description">
-								<h4>Fricassée d'escargot</h4>
+								<h4>Tartare de thon</h4>
 								<p>
-									Au piment d'espelette
+									Assaisonné au yuzu
 								</p>
 							</div>
 							<span class="menu-item__prix">25€</span>
@@ -52,11 +54,14 @@
 								<i class="fas fa-check"></i>
 							</div>
 						</div>
+							</label>
+							<input class="btn-radio" id="homard_croustillant" name="entree" type="radio">
+                            <label for="homard_croustillant" class="choix">
 						<div class="menu-item">
 							<div class="menu-item__description">
-								<h4>Foie gras de canard mi-cuit</h4>
+								<h4>Bouchée de homard croustillant</h4>
 								<p>
-									Et ses copeaux de truffe noire
+									Et sa farandole de petits légumes
 								</p>
 							</div>
 							<span class="menu-item__prix">35€</span>
@@ -64,11 +69,16 @@
 								<i class="fas fa-check"></i>
 							</div>
 						</div>
+							</label>
+
+							<input class="btn-radio" id="veloute_cepes" name="entree" type="radio">
+                            <label for="veloute_cepes" class="choix">
+
 						<div class="menu-item">
 							<div class="menu-item__description">
-								<h4>Oeuf au plat</h4>
+								<h4>Velouté de cèpes</h4>
 								<p>
-									Assaisonné à la truffe sur lit de poireaux
+									Aux truffes
 								</p>
 							</div>
 							<span class="menu-item__prix">20€</span>
@@ -76,16 +86,19 @@
 								<i class="fas fa-check"></i>
 							</div>
 						</div>
+							</label>
 					</div>
 				</div>
 				<div class="menus__plats">
 					<h3>Plats</h3>
 					<div class="menu__plats__liste">
+						<input class="btn-radio" id="poulet_herbes" name="plat" type="radio">
+                            <label for="poulet_herbes" class="choix">
 						<div class="menu-item">
 							<div class="menu-item__description">
-								<h4>Filet de boeuf aux herbes</h4>
+								<h4>Poulet rôti aux herbes de provence </h4>
 								<p>
-									Accompagné de sa ribambelle de légumes
+									Et sa crème de truffe
 								</p>
 							</div>
 							<span class="menu-item__prix">40€</span>
@@ -93,11 +106,14 @@
 								<i class="fas fa-check"></i>
 							</div>
 						</div>
+							</label>
+							<input class="btn-radio" id="langouste_rotie" name="plat" type="radio">
+                            <label for="langouste_rotie" class="choix">
 						<div class="menu-item">
 							<div class="menu-item__description">
-								<h4>Parmentier de queue de boeuf</h4>
+								<h4>Langouste rôtie</h4>
 								<p>
-									A la truffe noire sur sa purée de panais
+									Et ses légumes de saison
 								</p>
 							</div>
 							<span class="menu-item__prix">35€</span>
@@ -105,11 +121,15 @@
 								<i class="fas fa-check"></i>
 							</div>
 						</div>
+							</label>
+							<input class="btn-radio" id="cote_angus" name="plat" type="radio">
+							<label for="cote_angus" class="choix">
+
 						<div class="menu-item">
 							<div class="menu-item__description">
-								<h4>Filet de Turbot</h4>
+								<h4>Côte de boeuf angus</h4>
 								<p>
-									Aux agrumes
+									Et sa purée de panais
 								</p>
 							</div>
 							<span class="menu-item__prix">44€</span>
@@ -117,16 +137,20 @@
 								<i class="fas fa-check"></i>
 							</div>
 						</div>
+							</label>
 					</div>
 				</div>
 				<div class="menus__plats">
 					<h3>Desserts</h3>
 					<div class="menu__plats__liste">
+						<input class="btn-radio" id="farandole" name="dessert" type="radio">
+                            <label for="farandole" class="choix">
+
 						<div class=" menu-item">
 							<div class="menu-item__description">
-								<h4>Paris-Brest</h4>
+								<h4>Farandole de desserts</h4>
 								<p>
-									Revisité
+								 Du chef
 								</p>
 							</div>
 							<span class="menu-item__prix">18€</span>
@@ -134,11 +158,15 @@
 								<i class="fas fa-check"></i>
 							</div>
 						</div>
+							</label>
+							<input class="btn-radio" id="creme_brulee" name="dessert" type="radio">
+                            <label for="creme_brulee" class="choix">
+
 						<div class="menu-item">
 							<div class="menu-item__description">
-								<h4>Macaron au chocolat d'exception</h4>
+								<h4>Crème brulée</h4>
 								<p>
-									Et glace à la vanille de Madagascar
+									Revisitée
 								</p>
 							</div>
 							<span class="menu-item__prix">22€</span>
@@ -146,11 +174,15 @@
 								<i class="fas fa-check"></i>
 							</div>
 						</div>
+							</label>
+							<input class="btn-radio" id="tiramisu" name="dessert" type="radio">
+                            <label for="tiramisu" class="choix">
+
 						<div class="menu-item">
 							<div class="menu-item__description">
-								<h4>Mousse au chocolat</h4>
+								<h4>Tiramisu</h4>
 								<p>
-									Au piment d'espelette et à la truffe noire
+									A la noisette
 								</p>
 							</div>
 							<span class="menu-item__prix">23€</span>
@@ -158,6 +190,7 @@
 								<i class="fas fa-check"></i>
 							</div>
 						</div>
+							</label>
 					</div>
 				</div>
 			</section>
