--- a/index.html
+++ b/index.html
@@ -45,9 +45,9 @@
       <section class="instructions">
         <h2>Fonctionnement</h2>
         <ol>
-          <li><i class="fas fa-mobile-alt"></i>Choisissez un restaurant</li>
-          <li><i class="fas fa-list-ul"></i>Composez votre menu</li>
-          <li><i class="fas fa-store"></i>Dégustez au restaurant</li>
+          <li><i class="fas fa-mobile-alt"></i><span>Choisissez un restaurant</span></li>
+          <li><i class="fas fa-list-ul"></i><span class ="composez">Composez votre menu</span></li>
+          <li><i class="fas fa-store"></i><span>Dégustez au restaurant</span></li>
         </ol>
       </section>
 
@@ -130,8 +130,8 @@
     <footer>
       <h2>ohmyfood
       </h2>
-       <p>
-         <i class="fas fa-utensils"></i>Proposer un restaurant</p>
+       <h3>
+         <i class="fas fa-utensils"></i>Proposer un restaurant</h3>
        <p><i class="fas fa-hands-helping"></i>Devenir partenaire</p>
        <p>Mentions légales</p>
        <p>
