--- a/sens.html
+++ b/sens.html
@@ -37,162 +37,162 @@
 			</section>
 
 			<section class="menus">
-				<div class="menus__plats">
-					<h3>Entrées</h3>
-					<div class="menu__plats__liste">
+				<span class="menus__plats">
+					<span class="h3">Entrées</span>
+					<span class="menu__plats__liste">
 						<input class="btn-radio" id="tartare_thon" name="entree" type="radio">
                             <label for="tartare_thon" class="choix">
-						<div class="menu-item">
-							<div class="menu-item__description">
-								<h4>Tartare de thon</h4>
-								<p>
+						<span class="menu-item">
+							<span class="menu-item__description">
+								<span class="h4">Tartare de thon</span>
+								<span class="p">
 									Assaisonné au yuzu
-								</p>
-							</div>
+                </span>
+							</span>
 							<span class="menu-item__prix">25€</span>
-							<div class="menu-item__check">
+							<span class="menu-item__check">
 								<i class="fas fa-check"></i>
-							</div>
-						</div>
+              </span>
+						</span>
 							</label>
 							<input class="btn-radio" id="homard_croustillant" name="entree" type="radio">
                             <label for="homard_croustillant" class="choix">
-						<div class="menu-item">
-							<div class="menu-item__description">
-								<h4>Bouchée de homard croustillant</h4>
-								<p>
+						<span class="menu-item">
+							<span class="menu-item__description">
+								<span class="h4">Bouchée de homard croustillant</span>
+								<span class="p">
 									Et sa farandole de petits légumes
-								</p>
-							</div>
+                </span>
+							</span>
 							<span class="menu-item__prix">35€</span>
-							<div class="menu-item__check">
+							<span class="menu-item__check">
 								<i class="fas fa-check"></i>
-							</div>
-						</div>
+              </span>
+						</span>
 							</label>
 
 							<input class="btn-radio" id="veloute_cepes" name="entree" type="radio">
                             <label for="veloute_cepes" class="choix">
 
-						<div class="menu-item">
-							<div class="menu-item__description">
-								<h4>Velouté de cèpes</h4>
-								<p>
+						<span class="menu-item">
+							<span class="menu-item__description">
+								<span class="h4">Velouté de cèpes</span>
+								<span class="p">
 									Aux truffes
-								</p>
-							</div>
+                </span>
+							</span>
 							<span class="menu-item__prix">20€</span>
-							<div class="menu-item__check">
+							<span class="menu-item__check">
 								<i class="fas fa-check"></i>
-							</div>
-						</div>
+              </span>
+						</span>
 							</label>
-					</div>
-				</div>
-				<div class="menus__plats">
-					<h3>Plats</h3>
-					<div class="menu__plats__liste">
+          </span>
+				</span>
+				<span class="menus__plats">
+					<span class="h3">Plats</span>
+					<span class="menu__plats__liste">
 						<input class="btn-radio" id="poulet_herbes" name="plat" type="radio">
                             <label for="poulet_herbes" class="choix">
-						<div class="menu-item">
-							<div class="menu-item__description">
-								<h4>Poulet rôti aux herbes de provence </h4>
-								<p>
+						<span class="menu-item">
+							<span class="menu-item__description">
+								<span class="h4">Poulet rôti aux herbes de provence </span>
+								<span class="p">
 									Et sa crème de truffe
-								</p>
-							</div>
+                </span>
+							</span>
 							<span class="menu-item__prix">40€</span>
-							<div class="menu-item__check">
+							<span class="menu-item__check">
 								<i class="fas fa-check"></i>
-							</div>
-						</div>
+              </span>
+						</span>
 							</label>
 							<input class="btn-radio" id="langouste_rotie" name="plat" type="radio">
                             <label for="langouste_rotie" class="choix">
-						<div class="menu-item">
-							<div class="menu-item__description">
-								<h4>Langouste rôtie</h4>
-								<p>
+						<span class="menu-item">
+							<span class="menu-item__description">
+								<span class="h4">Langouste rôtie</span>
+								<span class="p">
 									Et ses légumes de saison
-								</p>
-							</div>
+                </span>
+							</span>
 							<span class="menu-item__prix">35€</span>
-							<div class="menu-item__check">
+							<span class="menu-item__check">
 								<i class="fas fa-check"></i>
-							</div>
-						</div>
+              </span>
+						</span>
 							</label>
 							<input class="btn-radio" id="cote_angus" name="plat" type="radio">
 							<label for="cote_angus" class="choix">
 
-						<div class="menu-item">
-							<div class="menu-item__description">
-								<h4>Côte de boeuf angus</h4>
-								<p>
+						<span class="menu-item">
+							<span class="menu-item__description">
+								<span class="h4">Côte de boeuf angus</span>
+								<span class="p">
 									Et sa purée de panais
-								</p>
-							</div>
+                </span>
+							</span>
 							<span class="menu-item__prix">44€</span>
-							<div class="menu-item__check">
+							<span class="menu-item__check">
 								<i class="fas fa-check"></i>
-							</div>
-						</div>
+              </span>
+						</span>
 							</label>
-					</div>
-				</div>
-				<div class="menus__plats">
-					<h3>Desserts</h3>
-					<div class="menu__plats__liste">
+            </span>
+          </span>
+				<span class="menus__plats">
+					<span class="h3">Desserts</span>
+					<span class="menu__plats__liste">
 						<input class="btn-radio" id="farandole" name="dessert" type="radio">
                             <label for="farandole" class="choix">
 
-						<div class=" menu-item">
-							<div class="menu-item__description">
-								<h4>Farandole de desserts</h4>
-								<p>
+						<span class=" menu-item">
+							<span class="menu-item__description">
+								<span class="h4">Farandole de desserts</span>
+								<span class="p">
 								 Du chef
-								</p>
-							</div>
+                </span>
+							</span>
 							<span class="menu-item__prix">18€</span>
-							<div class="menu-item__check">
+							<span class="menu-item__check">
 								<i class="fas fa-check"></i>
-							</div>
-						</div>
+              </span>
+						</span>
 							</label>
 							<input class="btn-radio" id="creme_brulee" name="dessert" type="radio">
                             <label for="creme_brulee" class="choix">
 
-						<div class="menu-item">
-							<div class="menu-item__description">
-								<h4>Crème brulée</h4>
-								<p>
+						<span class="menu-item">
+							<span class="menu-item__description">
+								<span class="h4">Crème brulée</span>
+								<span class="p">
 									Revisitée
-								</p>
-							</div>
+                </span>
+							</span>
 							<span class="menu-item__prix">22€</span>
-							<div class="menu-item__check">
+							<span class="menu-item__check">
 								<i class="fas fa-check"></i>
-							</div>
-						</div>
+              </span>
+						</span>
 							</label>
 							<input class="btn-radio" id="tiramisu" name="dessert" type="radio">
                             <label for="tiramisu" class="choix">
 
-						<div class="menu-item">
-							<div class="menu-item__description">
-								<h4>Tiramisu</h4>
-								<p>
+						<span class="menu-item">
+							<span class="menu-item__description">
+								<span class="h4">Tiramisu</span>
+								<span class="p">
 									A la noisette
-								</p>
-							</div>
+                </span>
+							</span>
 							<span class="menu-item__prix">23€</span>
-							<div class="menu-item__check">
+							<span class="menu-item__check">
 								<i class="fas fa-check"></i>
-							</div>
-						</div>
+              </span>
+						</span>
 							</label>
-					</div>
-				</div>
+            </span>
+          </span>
 			</section>
 			<section class="order">
 				<button>Commander</button>
@@ -200,10 +200,10 @@
 		</main>
 		<footer>
 			<h2>ohmyfood</h2>
-			<p>
+			<h3>
 				<i class="fas fa-utensils"></i>
 				Proposer un restaurant
-			</p>
+      </h3>
 			<p>
 				<i class="fas fa-hands-helping"></i>
 				Devenir partenaire
