--- a/enchantee.html
+++ b/enchantee.html
@@ -37,162 +37,162 @@
 			</section>
 
 			<section class="menus">
-				<div class="menus__plats">
-					<h3>Entrées</h3>
-					<div class="menu__plats__liste">
+				<span class="menus__plats">
+					<span class="h3">Entrées</span>
+					<span class="menu__plats__liste">
 						<input class="btn-radio" id="ravioles_foie" name="entree" type="radio">
                             <label for="ravioles_foie" class="choix">
-						<div class="menu-item">
-							<div class="menu-item__description">
-								<h4>Ravioles de foie gras</h4>
-								<p>
+						<span class="menu-item">
+							<span class="menu-item__description">
+								<span class="h4">Ravioles de foie gras</span>
+								<span class="p">
 									Accompagnés de leur crème à la truffe
-								</p>
-							</div>
+                </span>
+							</span>
 							<span class="menu-item__prix">25€</span>
-							<div class="menu-item__check">
+							<span class="menu-item__check">
 								<i class="fas fa-check"></i>
-							</div>
-						</div>
+              </span>
+						</span>
 							</label>
 							<input class="btn-radio" id="caviar_oscietre" name="entree" type="radio">
                             <label for="caviar_oscietre" class="choix">
-						<div class="menu-item">
-							<div class="menu-item__description">
-								<h4>Caviar osciètre</h4>
-								<p>
+						<span class="menu-item">
+							<span class="menu-item__description">
+								<span class="h4">Caviar osciètre</span>
+								<span class="p">
 									Sur blini de farine de blé noir
-								</p>
-							</div>
+                </span>
+							</span>
 							<span class="menu-item__prix">35€</span>
-							<div class="menu-item__check">
+							<span class="menu-item__check">
 								<i class="fas fa-check"></i>
-							</div>
-						</div>
+              </span>
+						</span>
 							</label>
 
 							<input class="btn-radio" id="foie_cuit" name="entree" type="radio">
                             <label for="foie_cuit" class="choix">
 
-						<div class="menu-item">
-							<div class="menu-item__description">
-								<h4>Foie gras de canard cuit entier</h4>
-								<p>
+						<span class="menu-item">
+							<span class="menu-item__description">
+								<span class="h4">Foie gras de canard cuit entier</span>
+								<span class ="p">
 									Confiture de figue et pain toasté
-								</p>
-							</div>
+                </span>
+							</span>
 							<span class="menu-item__prix">35€</span>
-							<div class="menu-item__check">
+							<span class="menu-item__check">
 								<i class="fas fa-check"></i>
-							</div>
-						</div>
+              </span>
+						</span>
 							</label>
-					</div>
-				</div>
-				<div class="menus__plats">
-					<h3>Plats</h3>
-					<div class="menu__plats__liste">
+            </span>
+          </span>
+				<span class="menus__plats">
+					<span class ="h3">Plats</span>
+					<span class="menu__plats__liste">
 						<input class="btn-radio" id="noix_jacques" name="plat" type="radio">
                             <label for="noix_jacques" class="choix">
-						<div class="menu-item">
-							<div class="menu-item__description">
-								<h4>Noix de coquilles Saint-Jacques</h4>
-								<p>
+						<span class="menu-item">
+							<span class="menu-item__description">
+								<span class="h4">Noix de coquilles Saint-Jacques</span>
+								<span class="p">
 									Sur lit de purée de céleri-rave
-								</p>
-							</div>
+                </span>
+							</span>
 							<span class="menu-item__prix">40€</span>
-							<div class="menu-item__check">
+							<span class="menu-item__check">
 								<i class="fas fa-check"></i>
-							</div>
-						</div>
+              </span>
+						</span>
 							</label>
 							<input class="btn-radio" id="langoustine" name="plat" type="radio">
                             <label for="langoustine" class="choix">
-						<div class="menu-item">
-							<div class="menu-item__description">
-								<h4>Langoustine poêlée</h4>
-								<p>
+						<span class="menu-item">
+							<span class="menu-item__description">
+								<span class ="h4">Langoustine poêlée</span>
+								<span class="p">
 									Purée de patate douce
-								</p>
-							</div>
+                </span>
+							</span>
 							<span class="menu-item__prix">35€</span>
-							<div class="menu-item__check">
+							<span class="menu-item__check">
 								<i class="fas fa-check"></i>
-							</div>
-						</div>
+              </span>
+						</span>
 							</label>
 							<input class="btn-radio" id="mijote_boeuf" name="plat" type="radio">
 							<label for="mijote_boeuf" class="choix">
 
-						<div class="menu-item">
-							<div class="menu-item__description">
-								<h4>Mijoté de queue de boeuf</h4>
-								<p>
+						<span class="menu-item">
+							<span class="menu-item__description">
+								<span class ="h4">Mijoté de queue de boeuf</span>
+								<span class="p">
 									Et riz sauvage aux zests de citron
-								</p>
-							</div>
+                </span>
+							</span>
 							<span class="menu-item__prix">44€</span>
-							<div class="menu-item__check">
+							<span class="menu-item__check">
 								<i class="fas fa-check"></i>
-							</div>
-						</div>
+              </span>
+						</span>
 							</label>
-					</div>
-				</div>
-				<div class="menus__plats">
-					<h3>Desserts</h3>
-					<div class="menu__plats__liste">
+            </span>
+          </span>
+				<span class="menus__plats">
+					<span class="h3">Desserts</span>
+					<span class="menu__plats__liste">
 						<input class="btn-radio" id="macaron_noisette" name="dessert" type="radio">
                             <label for="macaron_noisette" class="choix">
 
-						<div class=" menu-item">
-							<div class="menu-item__description">
-								<h4>Macaron noisette et chocolat</h4>
-								<p>
+						<span class=" menu-item">
+							<span class="menu-item__description">
+								<span class="h4">Macaron noisette et chocolat</span>
+								<span class="p">
 									Glace au caramel brun et sel de Guérande
-								</p>
-							</div>
+                </span>
+							</span>
 							<span class="menu-item__prix">18€</span>
-							<div class="menu-item__check">
+							<span class="menu-item__check">
 								<i class="fas fa-check"></i>
-							</div>
-						</div>
+              </span>
+						</span>
 							</label>
 							<input class="btn-radio" id="baba_rhum" name="dessert" type="radio">
                             <label for="baba_rhum" class="choix">
 
-						<div class="menu-item">
-							<div class="menu-item__description">
-								<h4>Baba au rhum revisité</h4>
-								<p>
+						<span class="menu-item">
+							<span class="menu-item__description">
+								<span class="h4">Baba au rhum revisité</span>
+								<span class="p">
 									Avec son coulis de citron
-								</p>
-							</div>
+                </span>
+							</span>
 							<span class="menu-item__prix">22€</span>
-							<div class="menu-item__check">
+							<span class="menu-item__check">
 								<i class="fas fa-check"></i>
-							</div>
-						</div>
+              </span>
+						</span>
 							</label>
 							<input class="btn-radio" id="tarte_citron" name="dessert" type="radio">
                             <label for="tarte_citron" class="choix">
 
-						<div class="menu-item">
-							<div class="menu-item__description">
-								<h4>Tarte au citron meringuée</h4>
-								<p>
+						<span class="menu-item">
+							<span class="menu-item__description">
+								<span class="h4">Tarte au citron meringuée</span>
+								<span class="p">
 									Destructurée
-								</p>
-							</div>
+                </span>
+							</span>
 							<span class="menu-item__prix">23€</span>
-							<div class="menu-item__check">
+							<span class="menu-item__check">
 								<i class="fas fa-check"></i>
-							</div>
-						</div>
+              </span>
+						</span>
 							</label>
-					</div>
-				</div>
+            </span>
+          </span>
 			</section>
 			<section class="order">
 				<button>Commander</button>
@@ -200,10 +200,10 @@
 		</main>
 		<footer>
 			<h2>ohmyfood</h2>
-			<p>
+			<h3>
 				<i class="fas fa-utensils"></i>
 				Proposer un restaurant
-			</p>
+      </h3>
 			<p>
 				<i class="fas fa-hands-helping"></i>
 				Devenir partenaire
