--- a/francaise.html
+++ b/francaise.html
@@ -37,161 +37,161 @@
 			</section>
 
 			<section class="menus">
-				<div class="menus__plats">
-					<h3>Entrées</h3>
-					<div class="menu__plats__liste">
+				<span class="menus__plats">
+					<span class="h3">ENTREES</span>
+					<span class="menu__plats__liste">
 						<input class="btn-radio" id="tartare_poulpe" name="entree" type="radio">
                             <label for="tartare_poulpe" class="choix">
-						<div class="menu-item">
-							<div class="menu-item__description">
-								<h4>Tartare de poulpe acidulé</h4>
-								<p>
+						<span class="menu-item">
+							<span class="menu-item__description">
+								<span class="h4">Tartare de poulpe acidulé</span>
+								<span class="p">
 									Aux zests d'orange
-								</p>
-							</div>
+                </span>
+							</span>
 							<span class="menu-item__prix">25€</span>
-							<div class="menu-item__check">
+							<span class="menu-item__check">
 								<i class="fas fa-check"></i>
-							</div>
-						</div>
+              </span>
+						</span>
 							</label>
 							<input class="btn-radio" id="veloute_dantan" name="entree" type="radio">
                             <label for="veloute_dantan" class="choix">
-						<div class="menu-item">
-							<div class="menu-item__description">
-								<h4>Velouté de légumes d'antan</h4>
-								<p>
+						<span class="menu-item">
+							<span class="menu-item__description">
+								<span class="h4">Velouté de légumes d'antan</span>
+								<span class="p">
 									Carotte,panais,topinambour
-								</p>
-							</div>
+                </span>
+							</span>
 							<span class="menu-item__prix">35€</span>
-							<div class="menu-item__check">
+							<span class="menu-item__check">
 								<i class="fas fa-check"></i>
-							</div>
-						</div>
+              </span>
+						</span>
 							</label>
 
 							<input class="btn-radio" id="soupe_oignon" name="entree" type="radio">
                             <label for="soupe_oignon" class="choix">
 
-						<div class="menu-item">
-							<div class="menu-item__description">
-								<h4>Soupe à l'oignon</h4>
-								<p>
+						<span class="menu-item">
+							<span class="menu-item__description">
+								<span class="h4">Soupe à l'oignon</span>
+								<span class="p">
 									Revisitée
-								</p>
-							</div>
+                </span>
+							</span>
 							<span class="menu-item__prix">20€</span>
-							<div class="menu-item__check">
+							<span class="menu-item__check">
 								<i class="fas fa-check"></i>
-							</div>
-						</div>
+              </span>
+						</span>
 							</label>
-					</div>
-				</div>
-				<div class="menus__plats">
-					<h3>Plats</h3>
-					<div class="menu__plats__liste">
+            </span>
+          </span>
+				<span class="menus__plats">
+					<span class ="h3">PLATS</span>
+					<span class="menu__plats__liste">
 						<input class="btn-radio" id="coquilles" name="plat" type="radio">
                             <label for="coquilles" class="choix">
-						<div class="menu-item">
-							<div class="menu-item__description">
-								<h4>Coquilles Saint-Jacques</h4>
-								<p>
+						<span class="menu-item">
+							<span class="menu-item__description">
+								<span class="h4">Coquilles Saint-Jacques</span>
+								<span class="p">
 									Accompagnées d'une purée de panais
-								</p>
-							</div>
+                </span>
+							</span>
 							<span class="menu-item__prix">40€</span>
-							<div class="menu-item__check">
+							<span class="menu-item__check">
 								<i class="fas fa-check"></i>
-							</div>
-						</div>
+              </span>
+						</span>
 							</label>
-							<input class="btn-radio" id="magret-canard" name="plat" type="radio">
+							<input class="btn-radio" id="magret_canard" name="plat" type="radio">
                             <label for="magret_canard" class="choix">
-						<div class="menu-item">
-							<div class="menu-item__description">
-								<h4>Magret de canard</h4>
-								<p>
+						<span class="menu-item">
+							<span class="menu-item__description">
+								<span class ="h4">Magret de canard</span>
+								<span class="p">
 								 Et parmentier de pommes de terres
-								</p>
-							</div>
+                </span>
+							</span>
 							<span class="menu-item__prix">35€</span>
-							<div class="menu-item__check">
+							<span class="menu-item__check">
 								<i class="fas fa-check"></i>
-							</div>
-						</div>
+              </span>
+						</span>
 							</label>
 							<input class="btn-radio" id="pigeonneau" name="plat" type="radio">
 							<label for="pigeonneau" class="choix">
-						<div class="menu-item">
-							<div class="menu-item__description">
-								<h4>Pigeonneau d'Ille-de-Vilaine</h4>
-								<p>
+						<span class="menu-item">
+							<span class="menu-item__description">
+								<span class="h4">Pigeonneau d'Ille-de-Vilaine</span>
+								<span class="p">
 									Sur son lit de gnocchis aux légumes
-								</p>
-							</div>
+                </span>
+							</span>
 							<span class="menu-item__prix">44€</span>
-							<div class="menu-item__check">
+							<span class="menu-item__check">
 								<i class="fas fa-check"></i>
-							</div>
-						</div>
+							</span>
+						</span>
 							</label>
-					</div>
-				</div>
-				<div class="menus__plats">
-					<h3>Desserts</h3>
-					<div class="menu__plats__liste">
+            </span>
+          </span>
+				<span class="menus__plats">
+					<span class="h3">DESSERTS</span>
+					<span class="menu__plats__liste">
 						<input class="btn-radio" id="petales_violettes" name="dessert" type="radio">
                             <label for="petales_violettes" class="choix">
 
-						<div class=" menu-item">
-							<div class="menu-item__description">
-								<h4>Pétales de violettes glacés</h4>
-								<p>
+						<span class=" menu-item">
+							<span class="menu-item__description">
+								<span class ="h4">Pétales de violettes glacés</span>
+								<span class="p">
 									Et purée de noisettes
-								</p>
-							</div>
+                </span>
+							</span>
 							<span class="menu-item__prix">18€</span>
-							<div class="menu-item__check">
+							<span class="menu-item__check">
 								<i class="fas fa-check"></i>
-							</div>
-						</div>
+              </span>
+						</span>
 							</label>
 							<input class="btn-radio" id="fondant_chocolat" name="dessert" type="radio">
                             <label for="fondant_chocolat" class="choix">
 
-						<div class="menu-item">
-							<div class="menu-item__description">
-								<h4>Fondant au chocolat</h4>
-								<p>
+						<span class="menu-item">
+							<span class="menu-item__description">
+								<span class="h4">Fondant au chocolat</span>
+								<span class="p">
 									Revisité
-								</p>
-							</div>
+                </span>
+							</span>
 							<span class="menu-item__prix">22€</span>
-							<div class="menu-item__check">
+							<span class="menu-item__check">
 								<i class="fas fa-check"></i>
-							</div>
-						</div>
+              </span>
+						</span>
 							</label>
 							<input class="btn-radio" id="millefeuille" name="dessert" type="radio">
                             <label for="millefeuille" class="choix">
 
-						<div class="menu-item">
-							<div class="menu-item__description">
-								<h4>Millefeuille croustillantt</h4>
-								<p>
+						<span class="menu-item">
+							<span class="menu-item__description">
+								<span class="h4">Millefeuille croustillantt</span>
+								<span class="p">
 									Myrtilles et pâte d'amande
-								</p>
-							</div>
+                </span>
+							</span>
 							<span class="menu-item__prix">23€</span>
-							<div class="menu-item__check">
+							<span class="menu-item__check">
 								<i class="fas fa-check"></i>
-							</div>
-						</div>
+              </span>
+						</span>
 							</label>
-					</div>
-				</div>
+            </span>
+          </span>
 			</section>
 			<section class="order">
 				<button>Commander</button>
@@ -199,10 +199,10 @@
 		</main>
 		<footer>
 			<h2>ohmyfood</h2>
-			<p>
+			<h3>
 				<i class="fas fa-utensils"></i>
 				Proposer un restaurant
-			</p>
+      </h3>
 			<p>
 				<i class="fas fa-hands-helping"></i>
 				Devenir partenaire
