--- a/palette.html
+++ b/palette.html
@@ -37,162 +37,162 @@
 			</section>
 
 			<section class="menus">
-				<div class="menus__plats">
-					<h3>Entrées</h3>
-					<div class="menu__plats__liste">
+				<span class="menus__plats">
+					<span class="h3">Entrées</span>
+					<span class="menu__plats__liste">
 						<input class="btn-radio" id="fricassee_escargot" name="entree" type="radio">
                             <label for="fricassee_escargot" class="choix">
-						<div class="menu-item">
-							<div class="menu-item__description">
-								<h4>Fricassée d'escargot</h4>
-								<p>
+						<span class="menu-item">
+							<span class="menu-item__description">
+								<span class="h4">Fricassée d'escargot</span>
+								<span class="p">
 									Au piment d'espelette
-								</p>
-							</div>
+								</span>
+							</span>
 							<span class="menu-item__prix">25€</span>
-							<div class="menu-item__check">
+							<span class="menu-item__check">
 								<i class="fas fa-check"></i>
-							</div>
-						</div>
+							</span>
+						</span>
 							</label>
 							<input class="btn-radio" id="foie_canard" name="entree" type="radio">
                             <label for="foie_canard" class="choix">
-						<div class="menu-item">
-							<div class="menu-item__description">
-								<h4>Foie gras de canard mi-cuit</h4>
-								<p>
+						<span class="menu-item">
+							<span class="menu-item__description">
+								<span class="h4">Foie gras de canard mi-cuit</span>
+								<span class="p">
 									Et ses copeaux de truffe noire
-								</p>
-							</div>
+								</span>
+							</span>
 							<span class="menu-item__prix">35€</span>
-							<div class="menu-item__check">
+							<span class="menu-item__check">
 								<i class="fas fa-check"></i>
-							</div>
-						</div>
+							</span>
+						</span>
 							</label>
 
 							<input class="btn-radio" id="oeuf_plat" name="entree" type="radio">
                             <label for="oeuf_plat" class="choix">
 
-						<div class="menu-item">
-							<div class="menu-item__description">
-								<h4>Oeuf au plat</h4>
-								<p>
+						<span class="menu-item">
+							<span class="menu-item__description">
+								<span class="h4">Oeuf au plat</span>
+								<span class="p">
 									Assaisonné à la truffe sur lit de poireaux
-								</p>
-							</div>
+								</span>
+							</span>
 							<span class="menu-item__prix">20€</span>
-							<div class="menu-item__check">
+							<span class="menu-item__check">
 								<i class="fas fa-check"></i>
-							</div>
-						</div>
+							</span>
+						</span>
 							</label>
-					</div>
-				</div>
-				<div class="menus__plats">
-					<h3>Plats</h3>
-					<div class="menu__plats__liste">
+						</span>
+					</span>
+				<span class="menus__plats">
+					<span class="h3">Plats</span>
+					<span class="menu__plats__liste">
 						<input class="btn-radio" id="filet_boeuf" name="plat" type="radio">
                             <label for="filet_boeuf" class="choix">
-						<div class="menu-item">
-							<div class="menu-item__description">
-								<h4>Filet de boeuf aux herbes</h4>
-								<p>
+						<span class="menu-item">
+							<span class="menu-item__description">
+								<span class="h4">Filet de boeuf aux herbes</span>
+								<span class="p">
 									Accompagné de sa ribambelle de légumes
-								</p>
-							</div>
+								</span>
+							</span>
 							<span class="menu-item__prix">40€</span>
-							<div class="menu-item__check">
+							<span class="menu-item__check">
 								<i class="fas fa-check"></i>
-							</div>
-						</div>
+							</span>
+						</span>
 							</label>
 							<input class="btn-radio" id="parmentier_boeuf" name="plat" type="radio">
                             <label for="parmentier_boeuf" class="choix">
-						<div class="menu-item">
-							<div class="menu-item__description">
-								<h4>Parmentier de queue de boeuf</h4>
-								<p>
+						<span class="menu-item">
+							<span class="menu-item__description">
+								<span class="h4">Parmentier de queue de boeuf</span>
+								<span class="p">
 									A la truffe noire sur sa purée de panais
-								</p>
-							</div>
+								</span>
+							</span>
 							<span class="menu-item__prix">35€</span>
-							<div class="menu-item__check">
+							<span class="menu-item__check">
 								<i class="fas fa-check"></i>
-							</div>
-						</div>
+							</span>
+						</span>
 							</label>
 							<input class="btn-radio" id="filet_turbo" name="plat" type="radio">
 							<label for="filet_turbo" class="choix">
 
-						<div class="menu-item">
-							<div class="menu-item__description">
-								<h4>Filet de Turbot</h4>
-								<p>
+						<span class="menu-item">
+							<span class="menu-item__description">
+								<span class="h4">Filet de Turbot</span>
+								<span class="p">
 									Aux agrumes
-								</p>
-							</div>
+								</span>
+							</span>
 							<span class="menu-item__prix">44€</span>
-							<div class="menu-item__check">
+							<span class="menu-item__check">
 								<i class="fas fa-check"></i>
-							</div>
-						</div>
+							</span>
+						</span>
 							</label>
-					</div>
-				</div>
-				<div class="menus__plats">
-					<h3>Desserts</h3>
-					<div class="menu__plats__liste">
+						</span>
+					</span>
+				<span class="menus__plats">
+					<span class="h3">Desserts</span>
+					<span class="menu__plats__liste">
 						<input class="btn-radio" id="paris_brest" name="dessert" type="radio">
                             <label for="paris_brest" class="choix">
 
-						<div class=" menu-item">
-							<div class="menu-item__description">
-								<h4>Paris-Brest</h4>
-								<p>
+						<span class=" menu-item">
+							<span class="menu-item__description">
+								<span class="h4">Paris-Brest</span>
+								<span class="p">
 									Revisité
-								</p>
-							</div>
+								</span>
+							</span>
 							<span class="menu-item__prix">18€</span>
-							<div class="menu-item__check">
+							<span class="menu-item__check">
 								<i class="fas fa-check"></i>
-							</div>
-						</div>
+							</span>
+						</span>
 							</label>
 							<input class="btn-radio" id="macaron_chocolat" name="dessert" type="radio">
                             <label for="macaron_chocolat" class="choix">
 
-						<div class="menu-item">
-							<div class="menu-item__description">
-								<h4>Macaron au chocolat d'exception</h4>
-								<p>
+						<span class="menu-item">
+							<span class="menu-item__description">
+								<span class="h4">Macaron au chocolat d'exception</span>
+								<span class="p">
 									Et glace à la vanille de Madagascar
-								</p>
-							</div>
+								</span>
+							</span>
 							<span class="menu-item__prix">22€</span>
-							<div class="menu-item__check">
+							<span class="menu-item__check">
 								<i class="fas fa-check"></i>
-							</div>
-						</div>
+							</span>
+						</span>
 							</label>
 							<input class="btn-radio" id="mousse_chocolat" name="dessert" type="radio">
                             <label for="mousse_chocolat" class="choix">
 
-						<div class="menu-item">
-							<div class="menu-item__description">
-								<h4>Mousse au chocolat</h4>
-								<p>
+						<span class="menu-item">
+							<span class="menu-item__description">
+								<span class="h4">Mousse au chocolat</span>
+								<span class="p">
 									Au piment d'espelette et à la truffe noire
-								</p>
-							</div>
+								</span>
+							</span>
 							<span class="menu-item__prix">23€</span>
-							<div class="menu-item__check">
+							<span class="menu-item__check">
 								<i class="fas fa-check"></i>
-							</div>
-						</div>
+							</span>
+						</span>
 							</label>
-					</div>
-				</div>
+						</span>
+					</span>
 			</section>
 			<section class="order">
 				<button>Commander</button>
@@ -200,10 +200,10 @@
 		</main>
 		<footer>
 			<h2>ohmyfood</h2>
-			<p>
+			<h3>
 				<i class="fas fa-utensils"></i>
 				Proposer un restaurant
-			</p>
+			</h3>
 			<p>
 				<i class="fas fa-hands-helping"></i>
 				Devenir partenaire
