--- a/sens.html
+++ b/sens.html
@@ -37,8 +37,9 @@
 			</section>
 
 			<section class="menus">
+        <!--Entrées du menu-->
 				<span class="menus__plats">
-					<span class="h3">Entrées</span>
+					<span class="h3">ENTREES</span>
 					<span class="menu__plats__liste">
 						<input class="btn-radio" id="tartare_thon" name="entree" type="radio">
                             <label for="tartare_thon" class="choix">
@@ -89,8 +90,9 @@
 							</label>
           </span>
 				</span>
+        <!--Plats du menu-->
 				<span class="menus__plats">
-					<span class="h3">Plats</span>
+					<span class="h3">PLATS</span>
 					<span class="menu__plats__liste">
 						<input class="btn-radio" id="poulet_herbes" name="plat" type="radio">
                             <label for="poulet_herbes" class="choix">
@@ -140,8 +142,9 @@
 							</label>
             </span>
           </span>
+          <!--Desserts du menu-->
 				<span class="menus__plats">
-					<span class="h3">Desserts</span>
+					<span class="h3">DESSERTS</span>
 					<span class="menu__plats__liste">
 						<input class="btn-radio" id="farandole" name="dessert" type="radio">
                             <label for="farandole" class="choix">
@@ -194,10 +197,12 @@
             </span>
           </span>
 			</section>
+      <!--Command button-->
 			<section class="order">
 				<button>Commander</button>
 			</section>
 		</main>
+    <!--Footer-->
 		<footer>
 			<h2>ohmyfood</h2>
 			<h3>
