--- a/francaise.html
+++ b/francaise.html
@@ -37,6 +37,8 @@
 			</section>
 
 			<section class="menus">
+
+        <!--Entrées du menu-->
 				<span class="menus__plats">
 					<span class="h3">ENTREES</span>
 					<span class="menu__plats__liste">
@@ -89,6 +91,7 @@
 							</label>
             </span>
           </span>
+          <!--Plats du menu-->
 				<span class="menus__plats">
 					<span class ="h3">PLATS</span>
 					<span class="menu__plats__liste">
@@ -139,6 +142,7 @@
 							</label>
             </span>
           </span>
+          <!--Desserts du menu-->
 				<span class="menus__plats">
 					<span class="h3">DESSERTS</span>
 					<span class="menu__plats__liste">
@@ -193,10 +197,12 @@
             </span>
           </span>
 			</section>
+      <!--Command button-->
 			<section class="order">
 				<button>Commander</button>
 			</section>
 		</main>
+    <!--Footer-->
 		<footer>
 			<h2>ohmyfood</h2>
 			<h3>
